FIX: Leaderboard table headers being too low when stuck

--- a/_sass/leaderboard.scss
+++ b/_sass/leaderboard.scss
@@ -15,7 +15,7 @@ body {
       thead {
         th {
           position:   sticky;
-          top:        39px;
+          top:        37px;
           background: #222222;
           border:     1px solid rgba(255, 255, 255, .7);
           padding:    5px;
